2006-09-11  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hn-app-menu-item.c:
	* hildon-navigator/hn-app-button.c:
	- Fixed memory leaks for hn_entry_info_get_title()
	* hildon-navigator/hildon-navigator-item.c:
	* hildon-statusbar/hildon-status-bar-main.c:
	- Fixed memory leaks. Fixes: NB#39673

2006-09-11  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hildon-navigator-window.c,
	  hildon-navigator/hildon-navigator-panel.c,
	  libhildonmenu/libhildonmenu.c: Do not free const char *
	  (Closes NB#39640)

2006-09-08  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hildon-navigator-panel.[ch]:
	- Removing plugins from panel by removing from his
	container. Fixes: NB#4005
	- Changed HNPanelDirection to GtkOrientation
	* hildon-navigator/hildon-navigator-item.c: Using
	  parent gtk_widget_destroy implementation.

2006-09-07  Moises Martinez <moises.martinzes@nokia.com>

	* others-menu.c: Applied fix to "Task Navigator requires
	  full binary path in .desktop file Exec field" 
	  Fixes: NB#39036
	* hn-app-switcher.c: "Application switcher menu button is
	  not working fine" Fixes: NB#39326

2006-09-06  Karoliina Salminen <karoliina.t.salminen@nokia.com>
    
	* All source files: Updated header texts
	* configure.ac: 2.9.25

2006-09-06  Moises Martinez <moises.martinzes@nokia.com>

	* configure.ac: 2.9.24

2006-09-06  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-home/layout-manager.c: 
	* hildon-home/hildon-home-titlebar.[ch]:
	- hide the accept and cancel layout during applet loading 
	preventing desktop crashing.. 
	Fixes (NB#39029)
	* hildon-home/hildon-home-main.c: Force creation of user's
	hildon-home configuration folder.

2006-08-31  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/others-menu.c: Do not hardcode the menu y
	  (Closes NB#39167)

2006-08-31  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Incorrect size icons shown in the Application switcher
	menu" (Closes NB#38684)